[tool.poetry]
name = "plant_pkg"
version = "0.1.0"
description = "A package used to get the plant's detailed information and care tips."
authors = ["Lili Lin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
